*add* weather current time

--- a/templates/newtab.html
+++ b/templates/newtab.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" charset="utf-8" src="/static/newtab/newtab.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/newtab/3rdparty/socket.io-1.4.5.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/newtab/3rdparty/Chart.bundle.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/newtab/3rdparty/chartjs-plugin-annotation.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/newtab/socket.js"></script>
     <link rel="stylesheet" href="/static/newtab/3rdparty/app.css" type="text/css" />
     <link rel="stylesheet" href="/static/newtab/3rdparty/prettify.css" type="text/css" />
